Solve the images layout problem
added extra wrappers for images in the contents to layout it effectively
	modified:   index.html
	modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
     margin: 0;
-    box-sizing: border-box;
     font-family: 'Roboto', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
 }
 
 img {max: width 100%;}
@@ -91,23 +91,38 @@ img {max: width 100%;}
 
 .boxes {
     display: flex;
-    gap: 32px;
-    text-align: center;
-    flex: 1;
+    flex-wrap: wrap;
+    gap: 24px;
+    justify-content: space-between;
 }
 
 .box {
-    width: 25%;
-    height: 25%;
+    flex: 1 1 18%;
+    max-width: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 8px;
 }
 
-.box img {
-    object-fit: cover;
+.box .img-wrapper {
     width: 100%;
-    height: 100%;
+    padding-top: 100%;
+    position: relative;
+    overflow: hidden;
     outline: 2px solid #3882f6;
     border-radius: 25px;
     margin-bottom: 8px;
+}
+
+.box img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .middle-contents {
